[gd_scene load_steps=5 format=3 uid="uid://bqppco1s6evwj"]

[ext_resource type="Script" path="res://Michael WIP/Scripts/UIScripts/BonusHeroPanel.gd" id="1_c7w2s"]
[ext_resource type="Texture2D" uid="uid://kjhjksp483uo" path="res://Michael WIP/MikeCrushSheet.png" id="2_dnufc"]
[ext_resource type="Texture2D" uid="uid://v64bjsldrabw" path="res://Art/MikeCrushSheet.png" id="2_kqp3f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63y8u"]
size = Vector2(48, 48)

[node name="AddableHero" type="Control"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 3
anchors_preset = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 1
mouse_default_cursor_shape = 2
script = ExtResource("1_c7w2s")
metadata/_edit_group_ = true

[node name="Back_Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_group_ = true

[node name="NinePatchRectBack" type="NinePatchRect" parent="Back_Panel"]
modulate = Color(0.564706, 0.564706, 0.564706, 1)
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kqp3f")
region_rect = Rect2(70, 68, 54, 54)

[node name="Front_Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
mouse_filter = 2
metadata/_edit_group_ = true

[node name="NinePatchRectFront" type="NinePatchRect" parent="Front_Panel"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
texture = ExtResource("2_dnufc")
region_rect = Rect2(4, 4, 54, 54)

[node name="Area2D" type="Area2D" parent="Front_Panel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Front_Panel/Area2D"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_63y8u")

[node name="HighLightPanel" type="Panel" parent="Front_Panel"]
visible = false
self_modulate = Color(1, 1, 1, 0)
z_index = 999
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
mouse_filter = 2
metadata/_edit_group_ = true

[node name="NinePatchRectHighlight" type="NinePatchRect" parent="Front_Panel/HighLightPanel"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
texture = ExtResource("2_dnufc")
region_rect = Rect2(68, 36, 24, 24)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[connection signal="mouse_entered" from="Front_Panel/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Front_Panel/Area2D" to="." method="_on_area_2d_mouse_exited"]
